--- a/Recall/styles.css
+++ b/Recall/styles.css
@@ -9,12 +9,179 @@ html {
 p, a {
   font-size: 1.8rem; 
 }
+
 a {text-decoration: none;}
 ul {list-style-type: none;}
 .header-cta, .arrow {display: none;}
+.wrapper {
+  margin: 2.6em; 
+}
 
 body {
   font-family: 'Nunito', sans-serif; 
   margin: 0; 
 }
 
+.navbar {
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+/* 
+  border: 1px solid blue;  */
+}
+
+a.logo {
+  color: var(--primary-color); 
+  font-weight: bold; 
+  font-size: 2.8rem; 
+}
+
+header ul {
+  display: flex; 
+  gap: 2.2em; 
+}
+
+header ul li a {
+  color: black; 
+}
+
+a.acive {
+  text-decoration: underline;
+}
+
+
+/* Hero Section */ 
+section.hero {
+  text-align: center;
+}
+
+h1 {
+  font-size: 3.2rem;
+  margin-top: 2em;
+  margin-bottom: .5em;
+}
+
+p.subhead {
+  font-size: 2rem; 
+}
+
+.cta-btns {
+  display: flex; 
+  gap: 1em; 
+  justify-content: center;
+  margin-top: 3em; 
+}
+
+.phone {
+  width: 90%; 
+  margin-top: 5em; 
+  position: relative; 
+  z-index: 2; 
+}
+
+/* Features section */ 
+
+section.features {
+  background: var(--primary-color); 
+  color: #fff; 
+  transform: skewY(12deg) translateY(-8em); 
+}
+
+section.features .wrapper {
+  transform: skewY(-12deg); 
+}
+
+section.features .wrapper ul {
+  display: flex;
+  flex-direction: column; 
+  gap: 3em; 
+  padding: 5em 0 10em; 
+}
+
+section.features svg {
+  width: 3.5rem;
+  margin-left: -.15em; 
+}
+
+section.features strong {
+  display: flex; 
+  flex-direction: column;
+  font-size: 2.6rem; 
+  gap: .2em;
+}
+
+/* Testimonials */ 
+
+h2 {
+  font-size: 2.8rem; 
+  font-family: 'Playfair Display'; 
+  font-weight: 300; 
+}
+
+.testimonial-quote p {
+  margin-bottom: 2em;
+}
+
+.author-pick {
+  width: 100%; 
+  border-radius: 1.2em; 
+  height: 17.7em; 
+  object-fit: cover;
+  margin-bottom: 2em; 
+}
+
+.author strong {
+  font-size: 2rem;
+  display: block;
+}
+
+.author a {
+  color: black;
+}
+
+ul.social-nav {
+  display: flex; 
+  gap: 1em; 
+  margin-top: 2em; 
+}
+
+ul.social-nav svg {
+  width: 3rem;
+}
+
+/* footer */ 
+
+footer {
+  background-color: #EDEDED;
+  padding: 1.6em 0; 
+  margin-top: 5em;
+}
+
+.footer-header {
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer a {
+  color: black; 
+}
+
+nav.footer-nav ul, nav.secondary-nav ul {
+  display: flex;
+  gap: 2em;
+}
+
+nav.footer-nav ul {
+  justify-content: right;
+}
+
+nav.secondary-nav ul {
+  margin-top: 4em;
+}
+
+nav.secondary-nav ul li a {
+  color: #363636; 
+  text-decoration: underline;
+  font-size: 1.4rem;
+}
