--- a/Recall/styles.css
+++ b/Recall/styles.css
@@ -185,3 +185,166 @@ nav.secondary-nav ul li a {
   text-decoration: underline;
   font-size: 1.4rem;
 }
+
+/* Media Querries table */ 
+
+@media only screen and (min-width: 700px) {
+  .header-cta {
+    display: inherit;
+    color: white;
+    font-size: 1.6rem;  
+    background-color: var(--primary-color);
+    font-weight: bold; 
+    padding: .5em .7em;
+    border-radius: .3em;
+  }
+
+  .hero .wrapper {
+    display: flex; 
+    justify-content: space-between;
+    gap: 3em; 
+  }
+
+  section.hero {
+    text-align: left; 
+  }  
+
+  h1 {
+    font-size: 5.1rem; 
+    line-height: 110%; 
+  }
+
+  .hero .right-col {
+    position: relative;
+    width: 500px; 
+    height: 600px; 
+    overflow: hidden;  
+  }
+
+  .phone {
+    position: absolute; 
+    left: 0;
+    width: 500px; 
+  }
+
+  .cta-btns {
+    justify-content: left;
+  }
+
+  /* features section */ 
+
+  section.features {
+    transform: skewY(7deg) translateY(-8em); 
+  }
+  
+  section.features .wrapper {
+    transform: skewY(-7deg); 
+  }
+
+  section.features:before {
+    content: "";
+    position: absolute; 
+    background: url('assets/graphic.svg') no-repeat; 
+    width: 205px; 
+    height: 80px; 
+    bottom: -30px;
+    left: 10%; 
+  }
+
+  section.features .wrapper ul {
+    display: grid; 
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr); 
+    padding: 7em 0 12em; 
+  }
+
+  section.features .wrapper ul li:last-of-type {
+    grid-column: 1/3; 
+  }
+
+  /* testimonials */ 
+
+  .testimonial-info {
+    display: flex; 
+    gap: 2em; 
+  }
+
+  .author-pic, .author{
+    flex: 1; 
+  }
+
+  .author-pic {
+    margin: 0;
+  }
+
+  .author {
+    display: flex; 
+    flex-direction: column; 
+    justify-content: space-between;
+  }
+}
+
+/* Desktop */ 
+
+@media only screen and (min-width: 950px) {
+  
+  .wrapper {
+    max-width: 1000px; 
+    margin: 2em auto; 
+  }
+
+  .phone {
+    width: 500px; 
+    left: -100px; 
+  }
+
+  .hero .right-col {
+    width: 500px; 
+    height: 600px; 
+    /* overflow: inherit;  */
+  }
+
+  /* features */ 
+
+  section.features .wrapper ul {
+    grid-template-columns: repeat(3, 1fr); 
+    grid-template-rows: 1fr; 
+    height: 300px; 
+    border: 2px solid blue; 
+  }
+
+  section.features .wrapper ul li:nth-of-type(1) {
+    align-self: start;
+  }
+
+  section.features .wrapper ul li:nth-of-type(2) {
+    align-self: center;
+  }
+
+  section.features .wrapper ul li:last-of-type {
+    align-self: end;
+    grid-column: auto; 
+  }
+
+  section.features:before {
+    left: 20%;
+  }
+
+  /* Testimonials */ 
+
+  .testimonial {
+    display: flex; 
+    gap: 4em; 
+    margin: 12em 0;
+  }
+
+  .testimonial-info, .testimonial-quote {
+      flex: 1; 
+  }
+
+  .testimonial h2 {
+    margin-top: 0; 
+  }
+
+}
+
