--- a/Panel/css/main.css
+++ b/Panel/css/main.css
@@ -216,4 +216,143 @@ h1 {
 }
 .customers ul .user-info strong {
   display: block;
+}
+
+/* Tablet */
+@media only screen and (min-width: 620px) {
+  .signout {
+    display: block;
+    padding: 0.7em;
+    background-color: var(--secondary-color);
+    border-radius: 0.3em;
+  }
+  .header-right nav {
+    display: flex;
+    align-items: center;
+    gap: 2em;
+  }
+  aside {
+    height: auto;
+    width: auto;
+    position: inherit;
+    text-align: inherit;
+    background: unset;
+    transition: unset;
+    transform: unset;
+    padding: 2em;
+    margin-top: 2em;
+    background-color: var(--secondary-color);
+    border-radius: 1em;
+  }
+  aside img {
+    background: unset;
+    cursor: unset;
+  }
+  aside nav ul {
+    margin-top: 0;
+    display: flex;
+    justify-content: space-around;
+  }
+  aside nav ul li {
+    margin-bottom: 0;
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+  }
+  aside nav ul li img {
+    display: block !important;
+  }
+  aside nav ul li a {
+    font-size: 1.8rem;
+  }
+  /* main area */
+  main {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 3em;
+  }
+  .earnings, .customers {
+    grid-column: 1/3;
+  }
+  .extra-stats ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2em;
+  }
+}
+/* Deaktop */
+@media only screen and (min-width: 1100px) {
+  .wrapper {
+    max-width: 1200px;
+    margin: 3em auto;
+    padding: 0 2em;
+  }
+  .col2 {
+    display: flex;
+    gap: 2em;
+  }
+  aside {
+    width: 10%;
+    flex-grow: 3;
+    min-width: 250px;
+    padding: 2em;
+  }
+  aside nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
+  aside nav ul {
+    justify-content: space-around;
+    flex-direction: column;
+    gap: 2em;
+  }
+  aside nav ul li {
+    margin-bottom: 0;
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+  }
+  aside .premium {
+    display: block;
+    background: var(--inner-panel-colorr);
+    padding: 2em;
+    color: white;
+    border-radius: 0.3em;
+  }
+  aside .premium header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  aside .premium header h3 {
+    font-size: 1.6rem;
+    margin: 0;
+  }
+  aside .premium header img {
+    width: 20px;
+  }
+  aside .premium p {
+    line-height: 150%;
+  }
+  /* main */
+  main {
+    flex-grow: 2;
+    grid-template-columns: 1.2fr 2fr;
+    grid-template-rows: repeat(3, auto);
+    flex-grow: 2;
+  }
+  .extra-stats {
+    padding: 3em;
+    display: flex;
+    justify-content: center;
+    border: 1px solid var(--border-color);
+  }
+  .extra-stats ul {
+    display: flex;
+    align-items: center;
+    gap: 5em;
+  }
 }/*# sourceMappingURL=main.css.map */
